--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -1953,9 +1953,9 @@ i गमनोपलेपनमालाबन्धनदीपारोपण
 अन्यच्च भवत्या भावनीयम् -
 
 शम-धन-निधिं सत्त्वप्रायं प्रयोगम् अयोगिनः  
-स्व-गुण-वशतः स्तोतुं यद् वा वरीव्रतु[^54] +++(←वृ)+++ निन्दितुम् ।  
+स्व-गुण-वशतः स्तोतुं यद् वा **वरीव्रतु**[^54] +++(←वृ)+++ निन्दितुम् ।  
 किम् इह बहुभिः, किं नश् छिन्नं, न विश्वम् अनीश्वरं  
-तद्-उपनिहिता जाग्रत्य्+++(=??)+++ एवं चतुर्-दश साक्षिणः  ॥ २३ ॥
+तद्-उपनिहिता **जाग्रत्य्** एवं चतुर्-दश +++(→आदित्यचन्द्रावनिलोऽनलश्च …)+++ साक्षिणः  ॥ २३ ॥
 
 [^54]: "वृञ् वरणे" इति धातोः यङ्लुगन्तस्य प्रथमपुरुषबहुवचने वरीव्रतु इति रूपम् ।
 </details>
@@ -1978,23 +1978,15 @@ i गमनोपलेपनमालाबन्धनदीपारोपण
 
 <details><summary>प्रभावलिः - २३</summary>
 
-अन्यदपीति । श्रीवेंकटेशगुरुः स्वाभिप्रायं नटवाक्येन प्रकाशयतिशमधनेति । **अयोगिनः** ; अब्रह्मविदः, अशान्ताश्च । **शमधनाः** ; शान्ताः मुनयः, तेषा निधिवदभिमतम् । **सन्त्वप्रायम्** ; सत्त्वगुणप्रचुरं सत्त्वस्य प्रचुरप्रतिपादकमित्यर्थः । इमं **प्रयोगम** ; नाटकम् । **स्वगुणवशनः** ; स्वकीयराजसतामसगुणवशात् । स्तोतुं **वरीव्रतु** ; भृशं **वृण्वताम्** ; स्तोतुमारभन्ताम् । यद्व। निन्दितुं गर्हितुमारभन्ताम् । तेषा स्तुतिर्न **स्तुतिः** ; निन्दा च न निन्देत्यर्थः । **इह** ;
-
-+
-
-५४  
-अस्मिन् विषये । किं बहुभिः प्रलापैः । किं **नश्छिन्नम्** ; तन्निन्दादिभिरस्माकं का वा हानिः । इदं विश्वमनीश्वरं न **भवति** ; विश्वेश्वरो भगवानस्य सौष्ठवं जानाति । **एवम्** ; किंच । **तदुपनिहिताः** ; तेन जगति स्थापिताः । चतुर्दश **साक्षिणः** ; "आदित्यचन्द्रौ" इत्यारभ्य " धर्मश्च जानाति नरस्य वृत्तम् इत्युक्ता लोकसाक्षिणो जाग्रति जानन्तीत्यर्थः ॥ २३ ॥
+अन्यदपीति । श्रीवेंकटेशगुरुः स्वाभिप्रायं नटवाक्येन प्रकाशयतिशमधनेति । **अयोगिनः** ; अब्रह्मविदः, अशान्ताश्च । **शमधनाः** ; शान्ताः मुनयः, तेषा निधिवदभिमतम् । **सन्त्वप्रायम्** ; सत्त्वगुणप्रचुरं सत्त्वस्य प्रचुरप्रतिपादकमित्यर्थः । इमं **प्रयोगम** ; नाटकम् । **स्वगुणवशनः** ; स्वकीयराजसतामसगुणवशात् । स्तोतुं **वरीव्रतु** ; भृशं **वृण्वताम्** ; स्तोतुमारभन्ताम् । यद्व। निन्दितुं गर्हितुमारभन्ताम् । तेषा स्तुतिर्न **स्तुतिः** ; निन्दा च न निन्देत्यर्थः । **इह** ; [[५४]] अस्मिन् विषये । किं बहुभिः प्रलापैः । किं **नश्छिन्नम्** ; तन्निन्दादिभिरस्माकं का वा हानिः । इदं विश्वमनीश्वरं न **भवति** ; विश्वेश्वरो भगवानस्य सौष्ठवं जानाति । **एवम्** ; किंच । **तदुपनिहिताः** ; तेन जगति स्थापिताः । चतुर्दश **साक्षिणः** ; "आदित्यचन्द्रौ" इत्यारभ्य " धर्मश्च जानाति नरस्य वृत्तम् इत्युक्ता लोकसाक्षिणो जाग्रति जानन्तीत्यर्थः ॥ २३ ॥
 </details>
 
 <details><summary>प्रभाविलासः - २३</summary>
 
-रामधनेत्यादि । अत्र शमेत्यात्मगुणानां दमादीनामप्युपलक्षणम् । शमादय एव धनं, तस्य निधिरावासः तम् । **सत्त्वप्रायम्** ; सत्त्वप्रकृतिविवेकादिपात्रचुरम् । तेन चासात्त्विक मोहादेरप्रचुरता गम्यते । **अयोगिनः** ; राजसतामसप्रकृतयः । **स्वगुणेति** ; गुणशब्देन राजसतामसगुणों विवक्षितौ । **वरीव्रतु** ; वृञ् वरणे इति धातुः । इह लोके । **बहुभिः** ;
-
-। अयोगिभिः किं कार्यमित्यर्थः । नः अस्माकम् । किं **छिन्नम्** ; किं  
+रामधनेत्यादि । अत्र शमेत्यात्मगुणानां दमादीनामप्युपलक्षणम् । शमादय एव धनं, तस्य निधिरावासः तम् । **सत्त्वप्रायम्** ; सत्त्वप्रकृतिविवेकादिपात्रचुरम् । तेन चासात्त्विक मोहादेरप्रचुरता गम्यते । **अयोगिनः** ; राजसतामसप्रकृतयः । **स्वगुणेति** ; गुणशब्देन राजसतामसगुणों विवक्षितौ । **वरीव्रतु** ; वृञ् वरणे इति धातुः । इह लोके । **बहुभिः** ;। अयोगिभिः किं कार्यमित्यर्थः । नः अस्माकम् । किं **छिन्नम्** ; किं  
 न्यूनम् । **तदुपनिहिताः** ; ईश्वराज्ञावर्तिनः " भीषास्माद्वातः पवते । भीषोदेति सूर्यः । भीषास्मादभिश्चेन्द्रश्च । मृत्युर्धावति पञ्चम इति " इति श्रुतेः । **साक्षिणः** ; आदित्यादयः । तदुक्तम् -
 
-" आदित्यचन्द्रावनिलोऽनलश्च द्यौर्भूमिरापो हृदयं दिशश्च ।
-
+> " आदित्यचन्द्रावनिलोऽनलश्च द्यौर्भूमिरापो हृदयं दिशश्च ।  
 अहश्च रात्रिश्च उभे च सन्ध्ये धर्मश्च जानाति नरस्य वृत्तम् ॥
 
 इति ॥ २३ ॥
