--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -426,7 +426,7 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 अखण्ड-दिङ्-मण्डल-शिखण्डकैः,  
 औपनिषद-रहस्योपदेश-देशिकैः,[^13]  
 अवगत-सकल-कला-कलापैः, [^14]  
-अत्रभवद्भिर् आर्य-मिश्रैः। यद् उत -  
+अत्रभवद्भिर् (+++(प्रबोध-चन्द्रोदयाख्य-)+++असमीचीन-पराङ्मुखैर्) आर्य-मिश्रैः। यद् उत -  
 
 
 [[१७]]
@@ -1242,12 +1242,12 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 इतश्चायमतीव बहु मन्तव्यः । यतः[^32]
 
-अपदिश्य किमप्यशेषगुप्त्यै निगमान्तेषु निरूढगौरवेण ।
+अपदिश्य+++(=व्याजीकृत्य)+++ किम् अप्य् +++(रूपकम् इति)+++ अ-शेष+++(-जन)+++-गुप्त्यै  
+निगमान्तेषु निरूढ-गौरवेण ।  
+प्रविभक्त-हिताहितः प्रयोगः[^33]  
+कविना कारुणिकेन कल्पितोऽसौ ॥ ११ ॥
 
 [^32]: यतः omitted---क,ग
-
-
-प्रविभक्तहिताहितः प्रयोगः[^33] कविना कारुणिकेन कल्पितोऽसौ ॥ ११ ॥
 
 [^33]: हिताहितप्रयोगः:----घ
 </details>
@@ -1269,7 +1269,13 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 
 <details><summary>प्रभावलिः - ११</summary>
 
-अथ प्रयोगस्य वक्तृवैलक्षण्यं बहुधा दर्शयति । वक्तृवैलक्षण्यादव्ययं बहुमन्तव्य इत्याह- इतश्चेति । यस्मादयं प्रयोगः कारुणिकेन कविना कल्पितः, इतश्चेत्यर्थः । अपदिश्येति । **किमप्यपदिश्य** ; **व्याजीकृत्य** ; कान्तासंमितत्वेनाध्यात्मज्ञानमुपदेष्टव्यमित्यभिप्रायेण । **अशेषगुत्यै** ; सर्वजनसंरक्षणाय । वेदान्तेषु निरूढं प्रसिद्धं गौरवमाचार्यत्वं यस्य, वेदान्ताचार्येणेत्यर्थः । कविः क्रान्तदर्शी अतिक्रान्तदर्शी । भूतभविष्यवर्तमान सर्ववस्तुसाक्षात्कर्त्रा गुरुणा । प्रविभक्तः प्रतिपादितः त्याज्योपादेयार्थी यस्मिन् असौ प्रयोगः नाटकं कल्पितः निर्मितः ॥ ११ ॥
+अथ प्रयोगस्य वक्तृवैलक्षण्यं बहुधा दर्शयति ।  
+वक्तृवैलक्षण्यादव्ययं बहुमन्तव्य इत्याह- इतश्चेति ।  
+यस्माद् **अयं प्रयोगः कारुणिकेन कविना कल्पितः**, इतश्चेत्यर्थः ।  
+अपदिश्येति ।  
+**किमप्यपदिश्य** = व्याजीकृत्य ;  
+कान्तासंमितत्वेनाध्यात्म-ज्ञानम् उपदेष्टव्यम् इत्य् अभिप्रायेण ।  
+**अशेषगुत्यै** ; सर्वजन-संरक्षणाय । वेदान्तेषु निरूढं प्रसिद्धं गौरवमाचार्यत्वं यस्य, वेदान्ताचार्येणेत्यर्थः । कविः क्रान्तदर्शी अतिक्रान्तदर्शी । भूतभविष्यवर्तमान सर्ववस्तुसाक्षात्कर्त्रा गुरुणा । प्रविभक्तः प्रतिपादितः त्याज्योपादेयार्थी यस्मिन् असौ प्रयोगः नाटकं कल्पितः निर्मितः ॥ ११ ॥
 </details>
 
 <details><summary>प्रभाविलासः - ११</summary>
@@ -1449,12 +1455,12 @@ Source: [TW](https://archive.org/details/in.ernet.dli.2015.368526/page/n111/mode
 [^38]: स च ---omitted--च
 
 
-विंशत्यब्दे विश्रुतनानाविधविद्य -
+विंशत्य्-अब्दे विश्रुत-नाना-विध-विद्यस्  
+त्रिंशद्वारं श्रावित-शारीरक-भाष्यः ।  
+श्रेयः श्रीमान् वेङ्कट-नाथः श्रुति-पथ्यं
+नाथ-प्रीत्यै नाटकम् अर्थ्यं **व्यधितैतत्** ॥ १५ ॥
 
-स्त्रिंशद्वारं श्रावितशारीरकभाष्यः ।  
-श्रेयः श्रीमान् वेंकटनाथः श्रुतिपथ्यं
-
-नाथप्रीत्यै नाटकमर्थ्यं व्यधितैतत् ॥ १५ ॥
++++(मत्तमयूरम् इति च्छन्दः। )+++
 </details>
 
 <details><summary>मूलम् - १५</summary>
