--- a/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/01.md
@@ -146,7 +146,7 @@ title = "01"
 कामः - (विहस्य) प्रिये, पश्यामि चक्षुषीव ते चेतस्यपि कातर्यम् । योजयामि खल्वहं योगीश्वरानपि युवतियोगीश्वरपादे ।  
 सुभगपरुषैर्मदस्त्रैः कीलितमन्योन्यकवचितैकार्धम् ।  
 किं न विदितं भवत्या किमपि मिथःस्यूतजीवितं मिथुनम् ॥ ४२ ॥ 
-रतिः - अय्यउत्त, अवहारिअं मए तुह माहप्पं । दाणिं उण दीहबुद्धिबळेण देव्वदिण्णहत्थेण जमणिअमप्पमुहबहुसहाअसंपण्णेन अहण्डुच्चाहप्पहुत्तणमन्तसत्तिणा सत्तुणा काहे किं होज्जत्ति पबळपवणाहआ कअळिएव्व तरळअरम्हि । पसिद्धं खु पण्णाबळं मोख्खपेरन्ताणं अइदुक्कराणं सिद्धीणं साहणं त्ति । [आर्यपुत्र, अवधारितं मया तव माहात्म्यम् । इदानीं पुनः दीर्घबुद्धिबलेन दैवदत्तहस्तेन यमनियमप्रमुखबहुसहायसंपन्नेन अखण्डोत्साहप्रभुत्वमन्त्रशक्तिना शत्रुणा कदा किं भवेदिति प्रबलपवनाहता कदलिकेव तरलतरास्मि । प्रसिद्धं खलु प्रज्ञाबलं मोक्षपर्यन्तानामतिदुष्कराणां सिद्धीनां साधनमिति] । 
+रतिः - अय्यउत्त, अवहारिअं मए तुह माहप्पं । दाणिं उण दीहबुद्धिबळेण देव्वदिण्णहत्थेण जमणिअमप्पमुहबहुसहाअसंपण्णेन अहण्डुच्चाहप्पहुत्तणमन्तसत्तिणा सत्तुणा काहे किं होज्जत्ति पबळपवणाहआ कअळिएव्व तरळअरम्हि । पसिद्धं खु पण्णाबळं मोख्खपेरन्ताणं अइदुक्कराणं सिद्धीणं साहणं त्ति । [आर्यपुत्र, अवधारितं मया तव माहात्म्यम् । इदानीं पुनः दीर्घबुद्धिबलेन दैवदत्तहस्तेन यमनियमप्रमुखबहुसहायसंपन्नेन अखण्डोत्साहप्रभुत्वमन्त्रशक्तिना शत्रुणा कदा किं भवेदिति प्रबलपवनाहता कदलिकेव तरलतरास्मि । प्रसिद्धं खलु प्रज्ञाबलं मोक्षपर्यन्तानामतिदुष्कराणां सिद्धीनां साधनमिति । 
 कामः - (सरोषहासम्) अयि मुग्धे, मञ्जुभाषिणि, गुञ्जन्मधुकरशिञ्जिनीसंहितविश्वलक्षविषमविशिखस्य नित्यविजयजागरूकस्य त्वत्प्रियस्य मे सन्निधौ का पुनः प्रज्ञा, केन वा कस्य मुक्तिर्भवित्री, किमिति नाम मध्य इव भवत्या मानसेऽपि सौक्ष्म्यं नालक्ष्यते? (विहस्य) प्रिये, हन्त! विदितमेतत् नूनमिदानीं स्तनगतं स्थौल्यमेतदन्तरापि संक्रान्तमिति । अथवा अविचारितरमणीयमबलाजनस्वाभाव्यं भवत्यामपि वर्तते । संपश्यतां भवती,  
 मयादिष्टः क्रोधः प्रथयति किमप्यान्ध्यमथ च स्मृतिभ्रंशः सेद्धा विघटयति बुद्धिं सपदि सः ।  
 तया मुक्तः क्षेत्री तमसि गहने विन्दति लयं तथाभूते किं वा जनयति विवेको जडमतिः ॥ ४३ ॥ 
